# agent

./: .env  .env.example  .gitignore  README.md  agent_prompt.py  agent_rules.py  agents.py  editor_tool.py  gunicorn_conf.py  hello.py  main.py  prompts.py  pyproject.toml  server.py  shell_tool.py  start.ipynb  system_prompt.py
.cursor/rules/: python.mdc
agent/: __init__.py  agent.py  llm.py  state_manager.py  tools.py
agent/tools/: __init__.py  registry.py  thinking_tools.py  travel_tools.py  utility_tools.py
examples/: custom_tools_example.py  travel_agent.py
search/: helpers.py  search.py  search_api.py  start.ipynb
static/: index.html  script.js
