[project]
name = "research-inc-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.2.13",
    "anthropic>=0.49.0",
    "duckduckgo-search>=2025.4.4",
    "e2b-code-interpreter>=1.2.0",
    "firecrawl-py>=1.15.0",
]
